# TCG-Arena-VTES

./: Decks.txt  Game_Vampiere_ The Eternal Struggle_v1.json  Game_Vampire_ The Eternal Struggle.json  README.md  TCG-Arena_VTES_Cardlist_v01.json  VTES.json  VTES_CardList.json  VTES_Cards.json  VTES_StarterDecks.json  disciplines.csv  pyproject.toml  vtes4tcgarena.py  vtes_allsets_keyed_v6.json  vtes_allsets_keyed_v7.json  vtes_allsets_keyed_v8.json  vtes_allsets_keyed_v9.json  vtes_allsets_v1.json  vtes_allsets_v2.json  vtes_allsets_v4.json  vtes_allsets_v6.json  vtes_allsets_v7.json  vtes_allsets_v8.json
.github/workflows/: main.yml
SCRIPTS/: jsonQuery_format.js
src/: vtes4tcgarena.py
